--- a/src/main/resources/templates/update-vehicle.html
+++ b/src/main/resources/templates/update-vehicle.html
@@ -38,26 +38,26 @@
 <span>Обновить данные ТС</span>
 <form th:method="PATCH" th:action="@{/vehicle/update/{regNumber}(regNumber=${oldRegNumber})}" th:object="${request}">
     <label for="brand">Марка</label>
-    <input type="text" th:field="*{brand}" id="brand"/><br>
+    <input type="text" th:field="*{brand}" id="brand" required/><br>
 
     <label for="model">Модель</label>
-    <input type="text" th:field="*{model}" id="model"/><br>
+    <input type="text" th:field="*{model}" id="model" required/><br>
 
     <label for="category">Категория</label>
-    <input type="text" th:field="*{category}" id="category"/><br>
+    <input type="text" th:field="*{category}" id="category" required/><br>
 
     <label for="type">Тип ТС</label>
-    <select id="type" th:field="*{type}">
+    <select id="type" th:field="*{type}" required>
         <option th:each="type : ${types}"
                 th:value="${type.getTypeName()}" th:text="${type.getTypeName()}">
         </option>
     </select><br>
 
     <label for="regNumber">Гос. номер</label>
-    <input type="text" th:field="*{regNumber}" id="regNumber"/><br>
+    <input type="text" th:field="*{regNumber}" id="regNumber" required/><br>
 
     <label for="prodYear">Год выпуска</label>
-    <select id="prodYear" th:field="*{prodYear}">
+    <select id="prodYear" th:field="*{prodYear}" required>
         <option th:value="${null}" th:text="Все"></option>
         <option th:each="year : ${#numbers.sequence(#dates.year(#dates.createNow()), 1900)}"
                 th:value="${year}" th:text="${year}">
@@ -65,7 +65,7 @@
     </select><br>
 
     <label for="hasTrailer">Наличие прицепа</label>
-    <select id="hasTrailer" th:field="*{hasTrailer}">
+    <select id="hasTrailer" th:field="*{hasTrailer}" required>
         <option th:value="да" th:text="да"></option>
         <option th:value="нет" th:text="нет"></option>
     </select><br>
