--- a/src/main/resources/templates/new-vehicle.html
+++ b/src/main/resources/templates/new-vehicle.html
@@ -5,47 +5,115 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>New vehicle</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<span>Добавить новое ТС</span>
-<form th:method="POST" th:action="@{/vehicle/new}" th:object="${request}">
-    <label for="brand">Марка</label>
-    <input type="text" th:field="*{brand}" id="brand" required/><br>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+<div class="container text-center">
+    <div class="mb-3"><br>
+        <div class="row g-3 align-items-center">
+            <div class="col-auto">
+                <span class="h4">Добавить ТС</span>
+            </div>
+        </div>
+        <br>
+        <form th:method="POST" th:action="@{/vehicle/new}" th:object="${request}">
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <label for="brand" class="form label h5">Марка</label>
+                </div>
+                <div class="col-auto">
+                    <input type="text" th:field="*{brand}" id="brand" class="form-control" required/><br>
+                </div>
+            </div>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <label for="model" class="form label h5">Модель</label>
+                </div>
+                <div class="col-auto">
+                    <input type="text" th:field="*{model}" id="model" class="form-control" required/><br>
+                </div>
+            </div>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <label for="category" class="form label h5">Категория</label>
+                </div>
+                <div class="col-auto">
+                    <input type="text" th:field="*{category}" id="category" class="form-control" required/><br>
+                </div>
+            </div>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <label for="type" class="form label h5">Тип ТС</label>
+                </div>
+                <div class="col-auto">
+                    <select id="type" th:field="*{type}" class="form-control" required>
+                        <option th:each="type : ${types}"
+                                th:value="${type.getTypeName()}" th:text="${type.getTypeName()}">
+                        </option>
+                    </select><br>
+                </div>
+            </div>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <label for="regNumber" class="form label h5">Гос. номер</label>
+                </div>
+                <div class="col-auto">
+                    <input type="text" th:field="*{regNumber}" id="regNumber" class="form-control" required/><br>
+                </div>
+            </div>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <label for="prodYear" class="form label h5">Год выпуска</label>
+                </div>
+                <div class="col-auto">
+                    <select id="prodYear" th:field="*{prodYear}" class="form-control" required>
+                        <option th:each="year : ${#numbers.sequence(#dates.year(#dates.createNow()), 1900)}"
+                                th:value="${year}" th:text="${year}">
+                        </option>
+                    </select><br>
+                </div>
+            </div>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <label for="hasTrailer" class="form label h5">Наличие прицепа</label>
+                </div>
+                <div class="col-auto">
+                    <select id="hasTrailer" th:field="*{hasTrailer}" class="form-control" required>
+                        <option th:value="да" th:text="да"></option>
+                        <option th:value="нет" th:text="нет"></option>
+                    </select><br>
+                </div>
+            </div>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <input type="submit" class="btn btn-primary" value="Добавить">
+                </div>
+            </div>
+            <br>
+        </form>
+        <div class="row g-3 align-items-center">
+            <div class="col-auto">
+                <form th:method="GET" th:action="@{/vehicle}">
+                    <input type="submit" class="btn btn-danger" value="Отменить">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <label for="model">Модель</label>
-    <input type="text" th:field="*{model}" id="model" required/><br>
 
-    <label for="category">Категория</label>
-    <input type="text" th:field="*{category}" id="category" required/><br>
 
-    <label for="type">Тип ТС</label>
-    <select id="type" th:field="*{type}" required>
-        <option th:each="type : ${types}"
-        th:value="${type.getTypeName()}" th:text="${type.getTypeName()}">
-        </option>
-    </select><br>
-
-    <label for="regNumber">Гос. номер</label>
-    <input type="text" th:field="*{regNumber}" id="regNumber" required/><br>
-
-    <label for="prodYear">Год выпуска</label>
-    <select id="prodYear" th:field="*{prodYear}" required>
-        <option th:each="year : ${#numbers.sequence(#dates.year(#dates.createNow()), 1900)}"
-                th:value="${year}" th:text="${year}">
-        </option>
-    </select><br>
-
-    <label for="hasTrailer">Наличие прицепа</label>
-    <select id="hasTrailer" th:field="*{hasTrailer}" required>
-        <option th:value="да" th:text="да"></option>
-        <option th:value="нет" th:text="нет"></option>
-    </select><br>
-    <input type="submit" value="Добавить">
-    <br>
-</form>
-<form th:method="GET" th:action="@{/vehicle}">
-    <input type="submit" value="Отменить">
-</form>
 </body>
 </html>
